--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,40 @@
 	<link href='css/styles.min.css' rel='stylesheet' type='text/css'>
 </head>
 
-<body ng-controller="appController" layout="column" role="application">
+<body ng-controller="appController" layout="column" role="application" ng-cloak>
 
+  <md-button ng-click="toggleLeft()"
+            class="md-primary" hide-gt-md>
+            Toggle left
+          </md-button>
+  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+      <md-toolbar class="md-theme-indigo">
+        <h1 class="md-toolbar-tools">Sidenav Left</h1>
+      </md-toolbar>
+      <md-content layout-padding>
+        <md-button ng-click="toggleLeft()" class="md-primary" hide-gt-md>
+          Close Sidenav Left
+        </md-button>
+        <p hide-md show-gt-md>
+          This sidenav is locked open on your device. To go back to the default behavior,
+          narrow your display.
+        </p>
+        <ul>
+          <li ng-repeat="(k,v) in menu">
+            <md-button ng-click="open = !open">
+              {{v.name}}
+            </md-button>
+            <ul ng-show="v.views && open">
+                <li ng-repeat="(kk,vv) in v.views">
+                  <md-button>
+                  {{vv.name}}
+                  </md-button>
+                </li>
+              </ul>
+          </li>
+        </ul>
+      </md-content>
+    </md-sidenav>
 	<md-content role="main" layout="column" ng-class="route" flex ui-view></md-content>
 
 
@@ -30,6 +62,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
 
 <script src="js/app.min.js"></script>
-
 </body>
 </html>
