--- a/src/index.html
+++ b/src/index.html
@@ -17,22 +17,22 @@
 
 <body ng-controller="appController" layout="column" role="application" ng-cloak>
 
-  <md-button ng-click="toggleLeft()"
-            class="md-primary" hide-gt-md>
-            Toggle left
-          </md-button>
-  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+  <md-toolbar>
+    <div class="md-toolbar-tools">
+      <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()">
+        +
+      </md-button>
+      <h2>
+        <span>Virtual center</span>
+      </h2>
+    </div>
+  </md-toolbar>
+
+  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
       <md-toolbar class="md-theme-indigo">
         <h1 class="md-toolbar-tools">Sidenav Left</h1>
       </md-toolbar>
       <md-content layout-padding>
-        <md-button ng-click="toggleLeft()" class="md-primary" hide-gt-md>
-          Close Sidenav Left
-        </md-button>
-        <p hide-md show-gt-md>
-          This sidenav is locked open on your device. To go back to the default behavior,
-          narrow your display.
-        </p>
         <ul>
           <li ng-repeat="(k,v) in menu">
             <md-button ng-click="open = !open">
@@ -49,7 +49,9 @@
         </ul>
       </md-content>
     </md-sidenav>
-	<md-content role="main" layout="column" ng-class="route" flex ui-view></md-content>
+
+
+	<md-content role="main" layout="column" ng-class="route" flex ui-view layout-padding></md-content>
 
 
 
