chore(home, core)
Modify Json ContactNets, add CSS animations in module Home for list
Contact Nets with simulate Post request.

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
     </md-sidenav>
 
 
-	<md-content role="main" layout="column" ng-class="route" flex ui-view layout-padding></md-content>
+	<md-content role="main" layout="column" ng-class="route" flex ui-view></md-content>
 
 
 
