--- a/src/index.html
+++ b/src/index.html
@@ -28,30 +28,34 @@
     </div>
   </md-toolbar>
 
-  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
-      <md-toolbar class="md-theme-indigo">
-        <h1 class="md-toolbar-tools">Sidenav Left</h1>
-      </md-toolbar>
-      <md-content layout-padding>
-        <ul>
-          <li ng-repeat="(k,v) in menu">
-            <md-button ng-click="open = !open">
-              {{v.name}}
-            </md-button>
-            <ul ng-show="v.views && open">
-                <li ng-repeat="(kk,vv) in v.views">
-                  <md-button>
-                  {{vv.name}}
-                  </md-button>
-                </li>
-              </ul>
-          </li>
-        </ul>
-      </md-content>
-    </md-sidenav>
+  <md-content role="main" layout="row" flex>
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2 md-closed" md-is-locked-open="$mdMedia('gt-xs') && isOpenLeft()" md-component-id="left">
+        <md-toolbar class="md-theme-indigo">
+          <h1 class="md-toolbar-tools">Sidenav Left</h1>
+        </md-toolbar>
+        <md-content layout-padding>
+          <ul>
+            <li ng-repeat="(k,v) in menu">
+              <md-button ng-click="open = !open">
+                {{v.name}}
+              </md-button>
+              <ul ng-show="v.views && open">
+                  <li ng-repeat="(kk,vv) in v.views">
+                    <md-button>
+                      {{vv.name}}
+                    </md-button>
+                  </li>
+                </ul>
+            </li>
+          </ul>
+        </md-content>
+      </md-sidenav>
 
 
-	<md-content role="main" layout="column" ng-class="route" flex ui-view></md-content>
+    <md-content role="view" layout="column" ng-class="route" flex ui-view></md-content>
+
+  </md-content>
+
 
 
 
