--- a/src/modules/home/home.html
+++ b/src/modules/home/home.html
@@ -16,10 +16,18 @@
 						<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length">
 
 							<div flex style="overflow-y: auto;" layout="column" layout-align="space-between">
-								<div style="overflow-y:auto;">
-									<p ng-repeat="noti in openCardData.notifications | orderBy">
-										<b>noti.ev_date</b> - noti.ev_comment
-									</p>	
+								<div style="overflow-y:auto;" layout="column">
+									<md-input-container flex>
+						        <label>Descripción del contactNet</label>
+						        <input ng-model="v.description">
+						      </md-input-container>
+<!-- 						      <md-input-container>
+						        <label>Email</label>
+						        <input ng-model="user.email" type="email">
+						      </md-input-container> -->
+						      <md-checkbox ng-model="v.modificable" aria-label="Checkbox 1" flex>
+				            Puede colgar la llamada
+				          </md-checkbox>
 								</div>
 								<div>
 									<md-button class="md-accent md-hue-2" ng-click="$clNavigate.designEditor(vv.ev_design_id)">Editar</md-button>
