--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <md-toolbar>
     <div class="md-toolbar-tools">
       <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()">
-        +
+        <md-icon md-svg-icon="menu" aria-label="Alarm Icon"></md-icon>
       </md-button>
       <h2>
         <span>Virtual center</span>
@@ -30,9 +30,6 @@
 
   <md-content role="main" layout="row" flex>
     <md-sidenav class="md-sidenav-left md-whiteframe-z2 md-closed" md-is-locked-open="$mdMedia('gt-xs') && isOpenLeft()" md-component-id="left">
-        <md-toolbar class="md-theme-indigo">
-          <h1 class="md-toolbar-tools">Sidenav Left</h1>
-        </md-toolbar>
         <md-content layout-padding>
           <ul>
             <li ng-repeat="(k,v) in menu">
