--- a/src/modules/home/home.html
+++ b/src/modules/home/home.html
@@ -44,6 +44,12 @@
 
 	</md-content>
 
+	<md-button class="md-fab md-fab-bottom-right md-hue-2" aria-label="contactNets">
+    <md-icon md-svg-icon="add"></md-icon>
+    <md-tooltip md-direction="top">
+      Add
+    </md-tooltip>
+  </md-button>
 
 </div>
 
