--- a/src/index.html
+++ b/src/index.html
@@ -9,50 +9,60 @@
 	<title>Virtual Center</title>
 	<link href='https://fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic' rel='stylesheet' type='text/css'>
 
-	 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
 
 
 	<link href='css/styles.min.css' rel='stylesheet' type='text/css'>
 </head>
 
-<body ng-controller="appController" layout="column" role="application" ng-cloak>
+<body ng-controller="appController" layout="row" role="application" ng-cloak>
 
-  <md-toolbar>
-    <div class="md-toolbar-tools">
-      <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()">
-        <md-icon md-svg-icon="menu" aria-label="Alarm Icon"></md-icon>
-      </md-button>
-      <h2>
-        <span>Virtual center</span>
-      </h2>
-    </div>
-  </md-toolbar>
-
-  <md-content role="main" layout="row" flex>
-    <md-sidenav class="md-sidenav-left md-whiteframe-z2 md-closed" md-is-locked-open="$mdMedia('gt-xs') && isOpenLeft()" md-component-id="left">
-        <md-content layout-padding>
-          <ul>
-            <li ng-repeat="(k,v) in menu">
-              <md-button ng-click="open = !open">
-                {{v.name}}
+  <md-sidenav class="md-sidenav-left md-whiteframe-z2 md-closed" md-is-locked-open="$mdMedia('gt-xs') && isOpenLeft()" md-component-id="left">
+      <md-content layout-padding>
+        <ul>
+          <li ng-repeat="(k,v) in menu">
+            <md-button ng-click="open = !open">
+              {{v.name}}
+            </md-button>
+            <ul ng-show="v.views && open">
+                <li ng-repeat="(kk,vv) in v.views">
+                  <md-button cn-navigate="{{vv.uri}}">
+                    {{vv.name}}
+                  </md-button>
+                </li>
+              </ul>
+          </li>
+        </ul>
+      </md-content>
+    </md-sidenav>
+  <md-content role="main" flex layout="column">
+    <md-toolbar class="masthead">
+        <div class="md-toolbar-tools">
+          <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()">
+            <md-icon md-svg-icon="menu" aria-label="Alarm Icon"></md-icon>
+          </md-button>
+          <h2>
+            <span>Virtual center</span>
+          </h2>
+        </div>
+        <h1 layout layout-align="start center" class="sectionTitle">
+          Contact Nets
+        </h1>
+        <md-tabs md-selected="selectedIndex" flex>
+          <md-tab ng-repeat="(k,v) in menu[0].views" ng-click="cnNavigate.path(v.uri)">
+            <md-tab-label layout="row">
+              <md-icon md-svg-icon="{{v.uri}}" aria-label="{{v.name}} Icon"></md-icon>
+              <md-button md-no-ink class="md-button" aria-label="{{v.name}} Button">
+                <span> {{v.name}}</span>
               </md-button>
-              <ul ng-show="v.views && open">
-                  <li ng-repeat="(kk,vv) in v.views">
-                    <md-button>
-                      {{vv.name}}
-                    </md-button>
-                  </li>
-                </ul>
-            </li>
-          </ul>
-        </md-content>
-      </md-sidenav>
-
-
-    <md-content role="view" layout="column" ng-class="route" flex ui-view></md-content>
-
+            </md-tab-label>
+          </md-tab> 
+           <!-- <md-tab label="Canales" ng-click="cnNavigate.path('channels')"></md-tab>
+           <md-tab label="Reglas" ng-click="cnNavigate.path('rules')"></md-tab>   -->
+        </md-tabs>
+      </md-toolbar>  
+      <md-content role="view" layout="column" ng-class="route" flex ui-view></md-content>
   </md-content>
-
 
 
 
