--- a/src/modules/channels/channels.html
+++ b/src/modules/channels/channels.html
@@ -5,7 +5,7 @@
 
 				<div class="md-item md-whiteframe-z1" ng-repeat="(k, v) in contactNetsService.contactNets track by $index" ng-class="{'open-item': v.openCard}">
 					<md-list-item ng-show="v.id" class="item" flex aria-label="row" md-ink-ripple class="md-clickable" cnContactNetInfo="{{v}}" cn-open-contact-nets>
-						<div flex>{{v.description}}</div>
+						<div flex>ASDGGGG | {{v.description}}</div>
 					</md-list-item>
 
 					<md-progress-linear md-mode="indeterminate" ng-if="v.openCard && !v.contactNetInfo"></md-progress-linear>
