--- a/src/modules/contactNets/contactNets.html
+++ b/src/modules/contactNets/contactNets.html
@@ -1,4 +1,4 @@
-<div id="timeline" layout="row" layout-fill layout flex style="overflow-y: scroll;">
+<div id="contactNets" layout="row" layout-fill layout flex style="overflow-y: scroll;">
 	<md-content layout="row" layout-align="center" flex>
 
 		<section flex>
