--- a/src/modules/rules/rules.html
+++ b/src/modules/rules/rules.html
@@ -37,10 +37,10 @@
 
 				<div ng-if="!contactNetsService.contactNets.length" class="md-whiteframe-z1 empty-section" layout-padding layout="row" layout-align="center">
 					<div flex="80" layout="column">
-						<md-icon class="planet-size-icon" style="color:#f5a623;" md-svg-icon="contactnets" aria-label="rules"></md-icon>
+						<md-icon class="md-accent planet-size-icon" md-svg-icon="rules" aria-label="rules"></md-icon>
 
 						<div flex layout="column">
-							<h3>No hay ningun ContactNet guardado, puedes <span class="blueVC-color">crear el primero ahora</span></h3>
+							<h3>No hay ninguna regla guardada, puedes <span class="blueVC-color">crear la primera ahora</span></h3>
 							<p>
 								Recuerda que necesitarás al menos tener creada una regla por cada canal que acrives en el ContactNet
 								<br> 
@@ -75,6 +75,8 @@
 					</div>
 									
 				</div>
+
+
 
 		</section>
 
