--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
           </md-tab> 
         </md-tabs>
 
-        <md-button class="md-fab fabButtonCreate" aria-label="contactNetsService.contactNets" cn-create-contact-net>
+        <md-button class="md-fab fabButtonCreate" aria-label="contactNetsService.contactNets" ng-click="addNew()">
           <md-icon md-svg-icon="add"></md-icon>
           <md-tooltip md-direction="top">
             Add
