--- a/src/modules/contactNets/directives/cnContactNetChatCardChannelConfiguration/cnContactNetChatCardChannelConfiguration.html
+++ b/src/modules/contactNets/directives/cnContactNetChatCardChannelConfiguration/cnContactNetChatCardChannelConfiguration.html
@@ -2,7 +2,7 @@
 	<md-list-item class="item" flex aria-label="row" md-ink-ripple ng-click="cnContactNetChatCardChannelConfiguration.openCard = !cnContactNetChatCardChannelConfiguration.openCard">
 		<div layout layout="row" flex layout-align="start center">
 			<md-icon md-svg-icon="message" aria-label="Open Chat" class="md-hue-3"></md-icon>
-			<span flex>Chat</span>
+			<span layout-margin flex>Chat</span>
 		</div>
 		<span flex></span>
 		<md-switch style="margin: 0;" ng-model="data.cb1" aria-label="Switch 1">
