--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <h1 layout layout-align="start center" class="sectionTitle md-headline">
-          Contact Nets
+          {{environment.actualSection}}
         </h1>
 
         <md-tabs md-selected="selectedIndex" flex class="topTabs md-hue-2">
