--- a/src/modules/rules/rules.html
+++ b/src/modules/rules/rules.html
@@ -1,4 +1,4 @@
-<div id="timeline" layout="row" layout-fill layout flex style="overflow-y: scroll;">
+<div id="sectionContactNets" layout="row" layout-fill layout flex style="overflow-y: scroll;">
 	<md-content id="rules" layout="row" layout-align="center" flex>
 
 		<section flex>
