--- a/src/modules/contactNets/directives/cnContactNetVoiceCardChannelConfiguration/cnContactNetVoiceCardChannelConfiguration.html
+++ b/src/modules/contactNets/directives/cnContactNetVoiceCardChannelConfiguration/cnContactNetVoiceCardChannelConfiguration.html
@@ -9,9 +9,9 @@
 	</md-list-item>
 
 	<div class="item-card" ng-if="cnContactNetVoiceCardChannelConfiguration.openCard" layout="column" layout-fill>
-		<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length">
+		<div layout-xs="column" layout-gt-xs="row" ng-show="!loadingCards.length">
 
-			<div flex layout="column" layout-align="space-between">
+			<div flex layout="column" layout-align="space-between" layout-padding>
 				
 					<div layout layout="row">
 						<md-input-container flex>
