--- a/src/modules/contactNets/contactNets.html
+++ b/src/modules/contactNets/contactNets.html
@@ -6,9 +6,9 @@
 				<md-list-item ng-show="v.id" class="item" flex aria-label="row" md-ink-ripple class="md-clickable" cnContactNetInfo="{{v}}" cn-open-contact-nets>
 					<div flex>{{v.description}}</div>
 					<span flex></span>
-					<md-icon md-svg-icon="phone" aria-label="Open Chat" class="md-hue-3"></md-icon>
-					<md-icon md-svg-icon="mail" aria-label="Open Chat" class="md-hue-3"></md-icon>
-					<md-icon md-svg-icon="message" aria-label="Open Chat" class="md-hue-3"></md-icon>
+					<md-icon md-svg-icon="phone" aria-label="Open Chat" class="greenVC-color"></md-icon>
+					<md-icon md-svg-icon="mail" aria-label="Open Chat" class="md-hue-3 greenVC-color"></md-icon>
+					<md-icon md-svg-icon="message" aria-label="Open Chat" class="greenVC-color"></md-icon>
 
 					<md-menu class="md-secondary" >
 	          <md-button aria-label="Open menu" class="md-icon-button" ng-click="$mdOpenMenu($event)">
@@ -41,7 +41,7 @@
 				<div layout-xs="column" layout-gt-xs="row" layout-padding ng-show="!loadingCards.length">
 
 					<div class="cardContainer" flex layout="column" layout-align="space-between">
-						<div layout layout="row" layout-align="start center" layout-margin>
+						<div layout layout="row" layout-align="start center" layout-margin class="md-hue-3">
 							<div flex layout="row" layout-align="center center">
 								<md-icon class="md-hue-3" md-svg-icon="mode-edit"></md-icon>
 								<input placeholder="Nombre del ContactNet" ng-model="v.description" flex>
