--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
               <md-icon md-svg-icon="{{v.icon}}" aria-label="Alarm Icon"></md-icon>
               <md-button ng-href="{{v.href}}" ng-click="open = !open" flex>
                 {{v.name}}
-              </md-button>    
+              </md-button>
             </div>
             <div layout="row" ng-show="!v.href" layout-align="center center">
               <md-icon md-svg-icon="{{v.icon}}" aria-label="Alarm Icon"></md-icon>
@@ -41,7 +41,7 @@
                   </md-button>
                   <md-button ng-show="v.href" ng-href="{{v.href}}" ng-click="open = !open">
                     {{v.name}}
-                  </md-button> 
+                  </md-button>
                 </li>
               </ul>
           </li>
@@ -68,20 +68,29 @@
               <span>{{v.name}}</span>
             </md-button>
           </md-tab-label>
-        </md-tab> 
+        </md-tab>
       </md-tabs>
 
-      <md-button class="md-fab fabButtonCreate" aria-label="contactNetsService.contactNets" ng-click="addNew()">
-        <md-icon md-svg-icon="add"></md-icon>
-        <md-tooltip md-direction="top">
-          Add
-        </md-tooltip>
-      </md-button>
+
+			<md-fab-speed-dial md-direction="down" class="md-scale fabButtonCreate">
+			  <md-fab-trigger>
+			    <md-button aria-label="trigger" ng-click="fab.trigger.action" class="md-fab md-accent">
+						<md-icon md-svg-icon="{{fab.trigger.icon}}"></md-icon>
+					</md-button>
+			  </md-fab-trigger>
+			  <md-fab-actions>
+					<div ng-if="fab.actions.length" ng-repeat="(k,v) in fab.actions">
+						<md-button aria-label="button" ng-click="v.action()" class="md-fab md-accent md-raised md-mini">
+							<md-icon md-svg-icon="{{v.icon}}"></md-icon>
+						</md-button>
+					</div>
+			  </md-fab-actions>
+			</md-fab-speed-dial>
 
     </md-toolbar>
 
     <section role="view" layout layout="column" ng-class="route" flex ui-view></section>
-      
+
   </md-content>
 
 
