fix(open-channel):
channel_id

--- a/src/modules/channels/channels.html
+++ b/src/modules/channels/channels.html
@@ -83,7 +83,7 @@
 				<md-icon class="planet-size-icon" style="color:#417505;" md-svg-icon="channels" aria-label="channels"></md-icon>
 
 				<div flex layout="column">
-					<h3>No hay ningun Canal guardado, puedes <span class="blueVC-color">crear el primero ahora</span></h3>
+					<h3>No hay ningun Canal guardado, puedes <span class="blueVC-color" ng-click="openFab()">crear el primero ahora</span></h3>
 					<p>
 						Recuerda que necesitarás al menos tener creada una regla por cada canal que acrives en el ContactNet
 						<br>
@@ -109,7 +109,7 @@
 					</div>
 
 					<div flex="15" layout="column" >
-						<md-icon class="big-icon" md-svg-icon="mail" aria-label="mail"></md-icon>
+						<md-icon class="big-icon" md-svg-icon="twitter" aria-label="mail"></md-icon>
 						<p>Twitter</p>
 						<span class="md-caption">Próximamente<span>
 					</div>
