--- a/src/modules/contactNets/directives/cnContactNetVoiceCardChannelConfiguration/cnContactNetVoiceCardChannelConfiguration.html
+++ b/src/modules/contactNets/directives/cnContactNetVoiceCardChannelConfiguration/cnContactNetVoiceCardChannelConfiguration.html
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 				<div layout="column">
-					<h4 layout="row" flex ng-click="traficoSaliente = !traficoSaliente" layout-align="start center" class="dropdownClick">
+					<h4 layout="row" flex layout-align="start center" class="dropdownClick">
 						Tráfico saliente 
 					</h4>
 					<div layout="row" flex layout-wrap>
