--- a/src/modules/rules/rules.html
+++ b/src/modules/rules/rules.html
@@ -74,7 +74,11 @@
 										<cn-select-languages cn-rule="v"></cn-select-languages>
 									</div>
 
-									<span class="md-caption" style="margin-top:20px;">Categorización</spana>
+									<span class="md-caption" style="margin-top:20px;">Categorización</span>
+
+									<div flex layout="row" layout-align="start center" style="margin:10px 0;">
+										<cn-categorization flex layout="row" cn-rule="v"></cn-categorization>
+									</div>
 
 								</div>
 
