--- a/src/modules/contactNets/contactNets.html
+++ b/src/modules/contactNets/contactNets.html
@@ -18,7 +18,7 @@
 	            <md-menu-item >
 	              <md-button ng-click="">
 	                  <div layout="row">
-	                  	<md-icon md-menu-align-target md-svg-icon="mode-edit"></md-icon>
+	                  	<md-icon md-menu-align-target md-svg-icon="edit"></md-icon>
 	                    <p flex>Editar</p>
 	                  </div>
 	              </md-button>
@@ -26,7 +26,7 @@
 	            <md-menu-item >
 	              <md-button ng-click="">
 	                  <div layout="row">
-	                  	<md-icon md-menu-align-target md-svg-icon="mail"></md-icon>
+	                  	<md-icon md-menu-align-target md-svg-icon="delete"></md-icon>
 	                    <p flex>Eliminar</p>
 	                  </div>
 	              </md-button>
@@ -67,7 +67,7 @@
 						<div layout layout-align="end">
 							<md-button class="md-hue-2">Siguiente</md-button>
 						</div>
-						
+
 					</div>
 
 				</div>
@@ -84,37 +84,37 @@
 					<h3>No hay ningun ContactNet guardado, puedes <span class="blueVC-color">crear el primero ahora</span></h3>
 					<p>
 						Recuerda que necesitarás al menos tener creada una regla por cada canal que actives en el ContactNet
-						<br> 
+						<br>
 						A continuación le recordamos los canales que tiene contratados
 					</p>
 				</div>
 
 				<div flex class="channels-section" layout="row" layout-align="space-between">
 					<div flex="15" layout="column" >
-						<md-icon class="big-icon" md-svg-icon="phone" aria-label="phone"></md-icon>								
+						<md-icon class="big-icon" md-svg-icon="phone" aria-label="phone"></md-icon>
 						<p>Voz</p>
 						<a class="blueVC-color">Contratar</a>
 					</div>
 
 					<div flex="15" layout="column" >
-						<md-icon class="big-icon greenVC-color" md-svg-icon="message" aria-label="message"></md-icon>								
+						<md-icon class="big-icon greenVC-color" md-svg-icon="message" aria-label="message"></md-icon>
 						<p>Chat</p>
 					</div>
 
 					<div flex="15" layout="column" >
-						<md-icon class="big-icon greenVC-color" md-svg-icon="mail" aria-label="mail"></md-icon>								
+						<md-icon class="big-icon greenVC-color" md-svg-icon="mail" aria-label="mail"></md-icon>
 						<p>Mail</p>
 					</div>
 
 					<div flex="15" layout="column" >
-						<md-icon class="big-icon" md-svg-icon="mail" aria-label="mail"></md-icon>								
+						<md-icon class="big-icon" md-svg-icon="mail" aria-label="mail"></md-icon>
 						<p>Twitter</p>
 						<span class="md-caption">Próximamente<span>
 					</div>
-				</div>	
+				</div>
 
 			</div>
-							
+
 		</div>
 
 	</section>
