--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 
 			<md-fab-speed-dial md-direction="down" md-open="fab.isOpen" class="md-scale fabButtonCreate">
 			  <md-fab-trigger>
-			    <md-button aria-label="trigger" ng-click="fab.trigger.action" class="md-fab md-accent">
+			    <md-button aria-label="trigger" ng-click="fab.trigger.action()" class="md-fab md-accent">
 						<md-icon md-svg-icon="{{fab.trigger.icon}}"></md-icon>
 					</md-button>
 			  </md-fab-trigger>
